changes confusion
